--- a/price.html
+++ b/price.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/price.css">
     <title>Document</title>
 </head>
-
 <body>
     <div class="layout">
-        <div class="top">
-            <div class="header">
-                <a href="javascript:;">
-                </a>
-                <a href="javascript:;"></a>
-            </div>
-            <div class="header_search">
-                <input type="text" name="" id="" placeholder="请输入您想比价的商品">
-                <input type="button" value="搜索">
-            </div>
+        <div class="header">
+            <a href="javascript:;">
+
+            </a>
+            <a href="javascript:;"></a>
         </div>
+        <div class="header_search">
+            <input type="text" name="" id="" placeholder="请输入您想比价的商品">
+            <input type="button" value="搜索">
+        </div>
+        
         <div class="footer">
             <div class="footer_nav">
                 <ul>
@@ -34,7 +33,7 @@
                         <a href="javascript:;">注册</a>
                     </li>
                     <li>
-                        <a href="javascript:;" class="back">返回顶部</a>
+                        <a href="javascript:;">返回顶部</a>
                     </li>
                 </ul>
             </div>
@@ -45,11 +44,9 @@
             </p>
         </div>
     </div>
-
+    
     <script src="/lib/jquery/jquery.min.js"></script>
     <script src="/lib/art-template/template-web.js"></script>
     <script rc="/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/js/common.js"></script>
 </body>
-
 </html>
