--- a/template.html
+++ b/template.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/price.css">
+   <link rel="stylesheet" href="./css/template.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="layout">
+        <!-- 头部部分 -->
         <div class="header">
             <a href="javascript:;">
-
+                <img src="./images/header_logo.png" alt="" class=''>
             </a>
-            <a href="javascript:;"></a>
+            <a href="javascript:;" class="fr">
+                <img src="./images/header_app.png" alt="">
+            </a>
         </div>
-        <div class="header_search">
-            <input type="text" name="" id="" placeholder="请输入您想比价的商品">
-            <input type="button" value="搜索">
-        </div>
-        
+        <!-- 头部搜索 -->
+        <!-- <div class="header_serach">
+            <form>
+                <input type="search" name="" id="" placeholder="请输入您想比价的商品" class='search'>
+                <button class='btn'>搜索</button>
+            </form>
+        </div> -->
+
+
+
+        <!-- 底部部分 -->
         <div class="footer">
             <div class="footer_nav">
                 <ul>
@@ -37,16 +46,18 @@
                     </li>
                 </ul>
             </div>
-            <p class="footer_download">
+            <div class="footer_download">
                 <a href="javascript:;">手机app下载</a>
                 慢慢买手机版
                 <span>--账上比价平台</span>
-            </p>
+                <p>m.manmanbuy.com</p>
+            </div>
         </div>
     </div>
-    
+
     <script src="/lib/jquery/jquery.min.js"></script>
     <script src="/lib/art-template/template-web.js"></script>
     <script rc="/lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
+
 </html>
